--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.DS_Store
+node_modules
+dist
 .env
-/node_modules/
-
-# React Router
-/.react-router/
-/build/
+.vscode
+.DS_Store
+npm-debug.log
+yarn-error.log
